[package]
name = "shanan"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "simple-image"
path = "src/bin/simple_image.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
url = "2.5"

v4l = "0.14"
image = { version = "0.25", features = ["png", "jpeg"], optional = true }
imageproc = { version = "0.26", optional = true }
ab_glyph = { version = "0.2", optional = true }
gstreamer = { version = "0.23", optional = true }
gstreamer-app = { version = "0.23", optional = true }
gstreamer-video = { version = "0.23", optional = true }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
thiserror = "2.0.18"


rknpu = { git = "https://github.com/Qinka/rknpu-rs.git", branch = "main" }
shanan-macro = { git = "https://github.com/Qinka/shanan-macro.git", branch = "main" }



[features]

default = ["read_image_file", "save_image_file"]

read_image_file = ["image"]
gstreamer_input = ["gstreamer", "gstreamer-app", "gstreamer-video"]
model_yolo26 = []
save_image_file = ["image", "imageproc", "ab_glyph"]