[package]
name = "shanan"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "simple-image"
path = "src/bin/simple_image.rs"

[[bin]]
name = "simple-camera"
path = "src/bin/simple_camera.rs"

[[bin]]
name = "simple-camera-rtsp"
path = "src/bin/simple_camera_rtsp.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
url = "2.5"

v4l = "0.14"
image = { version = "0.25", features = ["png", "jpeg"], optional = true }
imageproc = { version = "0.26", optional = true }
ab_glyph = { version = "0.2", optional = true }
gstreamer = { version = "0.24", optional = true }
gstreamer-app = { version = "0.24", optional = true }
gstreamer-video = { version = "0.24", optional = true }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
thiserror = "2.0.18"


rknpu = { git = "https://github.com/Qinka/rknpu-rs.git", branch = "main" }
shanan-macro = { git = "https://github.com/Qinka/shanan-macro.git", branch = "main" }
urlencoding = "2.1.3"
ctrlc = "3.5.1"



[features]

default = ["read_image_file", "save_image_file", "gstreamer_input", "gstreamer_output"]

read_image_file = ["image"]
gstreamer_input = ["gstreamer", "gstreamer-app", "gstreamer-video"]
gstreamer_output = ["gstreamer", "gstreamer-app", "gstreamer-video"]
model_yolo26 = []
save_image_file = ["image", "imageproc", "ab_glyph"]
