[package]
name = "shanan"
version = "0.1.17"
edition = "2024"
authors = ["Johann Li <me@qinka.pro> @Qinka"]
description = "A detection demo on rknpu with rust"
repository = "https://github.com/Qinka/shanan"
keywords = ["computer-vision", "image-processing", "gpu", "rknpu"]
categories = ["computer-vision", "multimedia::images"]
license = "Apache-2.0"



[[bin]]
name = "simple-continueshot"
path = "src/bin/simple_continueshot.rs"

[[bin]]
name = "simple-oneshot"
path = "src/bin/simple_oneshot.rs"

[[bin]]
name = "simple-repeatshot"
path = "src/bin/simple_repeatshot.rs"

[dependencies]

rknpu = { git = "https://github.com/Qinka/rknpu-rs.git", branch = "main" }
shanan-macro = { git = "https://github.com/Qinka/shanan-macro.git", branch = "main" }
shanan-cv = { git = "https://github.com/Qinka/shanan-cv.git", branch = "main", default-features = false, features = ["cpu"] }

anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
v4l = "0.14"
image = { version = "0.25", features = ["png", "jpeg"], optional = true }
imageproc = { version = "0.26", optional = true }
ab_glyph = { version = "0.2", optional = true }
gstreamer = { version = "0.24", optional = true }
gstreamer-app = { version = "0.24", optional = true }
gstreamer-video = { version = "0.24", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
urlencoding = "2.1"
ctrlc = "3.5"
chrono = "0.4"


[features]

default = ["read_image_file", "save_image_file", "gstreamer_input", "gstreamer_output", "directory_record", "model_yolo26"]

# inputs
read_image_file = ["image"]
gstreamer_input = ["gstreamer", "gstreamer-app", "gstreamer-video"]

# models
model_yolo26 = []

# outputs
gstreamer_output = ["gstreamer", "gstreamer-app", "gstreamer-video"]
save_image_file = ["image", "imageproc", "ab_glyph"]
directory_record = []

# 加速
cubecl-wgpu = ["shanan-cv/wgpu"]

